--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "jandareal@gmail.com, roman_belowski@protonmail.com, ulla.fraemke@techscout-fraemke.de",
   "license": "ISC",
   "packageManager": "pnpm@10.18.3",
   "dependencies": {
