--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,9 @@
   "devDependencies": {
     "@types/node": "25.1.0",
     "@types/react": "19.2.10",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.9.3"
   }
 }
