--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.18.3",
   "dependencies": {
+    "@google/genai": "^1.39.0",
     "@google/generative-ai": "^0.24.1",
     "next": "^16.1.6",
     "openai": "^6.17.0",
