--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@google/generative-ai": "^0.24.1",
     "next": "^16.1.6",
     "openai": "^6.17.0",
+    "potrace": "^2.1.8",
     "react": "^19.1.0",
     "react-dropzone": "^14.4.0"
   },
